# drosophila-parkinsonism-subgroups

./: 2026_kaempf_sleep_features.csv  A10_analyse_peak.R  A2_mean_fraction_sleep_day_night.R  A3_sleep-architecture.R  A4_latency.R  A5_beam_crosses.R  A6_analyse_activity.R  A8_analyse_velocity.R  A9_anticipation.R  B1_motor_parameters.R  README.md  ethoscope_QC.R  ethoscope_device_qc.R  install_dependencies.R  install_dependencies.sh  library.R  main.R  merge_behavr.R  movement_detector.R  parameters.R
Figure2/: hierarchical clustering and PCA.R  scale_sleep5.csv
Figure2/extract-sleep-features/: 2026_kaempf_sleep_features_small.csv  README.md
Figure2/nmf_analysis/: README.md
Figure2_and_related_suppl/: scale_sleep5.csv  summary_results_PDcollection_stats.csv
Figure2_and_related_suppl/extract-sleep-features/: README.md  analyse_plot_data.R  library.R  paths.txt  plot_data.R
Figure2_and_related_suppl/nmf_analysis/scripts/: train_models.py  (+1 more)
Figure3/: Jaccard.R
Figure3/bayesian-modelling-interactions/: 2025-09-17_Bayesian-modelling_view.ipynb  document-environment.py  model.py  models  run.py
Figure4/: Fishers exact test for Q10 R55.R
Parkinsonism_gene_expression_flybrain_body/: FigureS6.html
bayesian-modelling-interactions/: utils.py
extract-sleep-features/: 2026_kaempf_sleep_features.csv  main.R  old_library.R
figure_s6/: FigureS6.ipynb
nmf_analysis/: Makefile  pyproject.toml
nmf_analysis/notebooks/: nmf-analysis.ipynb
nmf_analysis/scripts/: generate_dataset.py
nmf_analysis/src/nmf_analysis/: data.py  main.py  transformers.py  visualisation.py
(+6 files in other folders)
