[tool.poetry]
name = "nmf-analysis"
version = "0.0.0"
description = ""
authors = ["Pieter Robberechts <pieter.robberechts@kuleuven.be>"]
license = "Apache-2.0"
readme = 'README.md'
keywords = ["Non-negative matrix factorization"]
packages = [{include = "nmf_analysis", from="src"}]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
ipykernel = "^5.1"
tqdm = "^4.51.0"
typer = "^0.4.0"
openpyxl = "^3.0.9"
pretty-errors = "^1.2.25"
rich = "^10.15.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "1.3"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"

[tool.poetry.scripts]
fruitfly = 'nmf_analysis.main:app'

[tool.isort]
profile = "black"
src_paths = ["nmf_analysis", "tests"]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["nmf_analysis", "tests"]
line_length = 79
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["test.*"]
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
